--- a/docker/haproxy_cluster.cfg
+++ b/docker/haproxy_cluster.cfg
@@ -13,8 +13,25 @@ defaults
   timeout server 30s
   timeout connect 5s
 
+listen stats
+  bind *:1936
+  mode http
+  log global
+
+  maxconn 10
+  timeout client 100s
+  timeout server 100s
+  timeout connect 100s
+  timeout queue 100s
+
+  stats enable
+  stats uri /haproxy?stats
+  stats realm HAProxy\ Statistics
+  stats admin if TRUE
+  stats show-node
+
 listen elasticsearch
-  bind *:9201
+  bind *:9200
   mode http
   balance roundrobin
   option httpchk
@@ -25,7 +42,7 @@ listen elasticsearch
   server elasticsearchc03 elasticsearchc03:9200 check inter 2s on-marked-down shutdown-sessions
 
 listen cockroachdb
-  bind *:26258
+  bind *:27257
   mode tcp
   option tcplog
   option tcpka
@@ -44,19 +61,12 @@ listen cockroachdb_http
   server cockroachc02 cockroachc02:8080 check inter 2s on-marked-down shutdown-sessions
   server cockroachc03 cockroachc03:8080 check inter 2s on-marked-down shutdown-sessions
 
-listen stats
-  bind *:1936
-  mode http
-  log global
-
-  maxconn 10
-  timeout client 100s
-  timeout server 100s
-  timeout connect 100s
-  timeout queue 100s
-
-  stats enable
-  stats uri /haproxy?stats
-  stats realm HAProxy\ Statistics
-  stats admin if TRUE
-  stats show-node
+listen etcd
+  bind *:2379
+  mode tcp
+  option tcplog
+  option tcpka
+  balance roundrobin
+  server etcdc01 etcdc01:2379 check inter 2s on-marked-down shutdown-sessions
+  server etcdc02 etcdc02:2379 check inter 2s on-marked-down shutdown-sessions
+  server etcdc03 etcdc03:2379 check inter 2s on-marked-down shutdown-sessions
