--- a/docker/docker-compose-cluster.yaml
+++ b/docker/docker-compose-cluster.yaml
@@ -222,6 +222,22 @@ services:
     - bash
     - -c
     - /usr/local/bin/etcd.sh
+  etcd_cluster_role_setup:
+    image: quay.io/coreos/etcd:v3.5.1
+    container_name: etcd_cluster_role_setup
+    environment:
+    - USER_ROOT_PASSWORD=root
+    - USER_SYNKER_PASSWORD=synker
+    entrypoint: 
+    - bash
+    - -c
+    - /usr/local/bin/etcd_auth.sh
+    depends_on:
+    - haproxy
+    volumes:
+    - ./etcd_auth.sh:/usr/local/bin/etcd_auth.sh:ro
+    networks:
+    - synker_cluster
 
 networks:
   synker_cluster:
