--- a/docker/haproxy_cluster.cfg
+++ b/docker/haproxy_cluster.cfg
@@ -41,32 +41,12 @@ listen elasticsearch
   server elasticsearchc02 elasticsearchc02:9200 check inter 2s on-marked-down shutdown-sessions
   server elasticsearchc03 elasticsearchc03:9200 check inter 2s on-marked-down shutdown-sessions
 
-listen cockroachdb
-  bind *:27257
+listen redpanda
+  bind *:9092
   mode tcp
   option tcplog
   option tcpka
   balance roundrobin
-  server cockroachc01 cockroachc01:26257 check inter 2s on-marked-down shutdown-sessions
-  server cockroachc02 cockroachc02:26257 check inter 2s on-marked-down shutdown-sessions
-  server cockroachc03 cockroachc03:26257 check inter 2s on-marked-down shutdown-sessions
-
-listen cockroachdb_http
-  bind *:8080
-  mode tcp
-  option tcplog
-  option tcpka
-  balance roundrobin
-  server cockroachc01 cockroachc01:8080 check inter 2s on-marked-down shutdown-sessions
-  server cockroachc02 cockroachc02:8080 check inter 2s on-marked-down shutdown-sessions
-  server cockroachc03 cockroachc03:8080 check inter 2s on-marked-down shutdown-sessions
-
-listen etcd
-  bind *:2379
-  mode tcp
-  option tcplog
-  option tcpka
-  balance roundrobin
-  server etcdc01 etcdc01:2379 check inter 2s on-marked-down shutdown-sessions
-  server etcdc02 etcdc02:2379 check inter 2s on-marked-down shutdown-sessions
-  server etcdc03 etcdc03:2379 check inter 2s on-marked-down shutdown-sessions
+  server redpandac01 redpandac01:9092 check inter 2s on-marked-down shutdown-sessions
+  server redpandac02 redpandac02:9092 check inter 2s on-marked-down shutdown-sessions
+  server redpandac03 redpandac03:9092 check inter 2s on-marked-down shutdown-sessions
