--- a/docker/cockroach-demo/haproxy_cluster.cfg
+++ b/docker/cockroach-demo/haproxy_cluster.cfg
@@ -40,3 +40,33 @@ listen elasticsearch
   server elasticsearchc01 elasticsearchc01:9200 check inter 2s on-marked-down shutdown-sessions
   server elasticsearchc02 elasticsearchc02:9200 check inter 2s on-marked-down shutdown-sessions
   server elasticsearchc03 elasticsearchc03:9200 check inter 2s on-marked-down shutdown-sessions
+
+listen redpanda_cluster
+  bind :8082
+
+  mode tcp
+  option tcplog
+  option tcpka
+  balance roundrobin
+  timeout client 7200s
+  timeout server 7200s
+
+  server redpandac01 redpandac01 check port 8082
+  server redpandac02 redpandac02 check port 8082
+  server redpandac03 redpandac03 check port 8082
+
+
+listen redpanda_kafka
+  bind :9092
+
+  mode tcp
+  option tcplog
+  option tcpka
+  balance roundrobin
+  timeout client 7200s
+  timeout server 7200s
+
+  server redpandac01 redpandac01 check port 9092
+  server redpandac02 redpandac02 check port 9092
+  server redpandac03 redpandac03 check port 9092
+
