[ci] - Fix configs path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ on:
 
 jobs:
   call-workflow-golangci:
-    uses: ./github/workflows/golangci.yml
+    uses: ./.github/jobs/golangci.yml
   call-workflow-unit-testing:
-    uses: ./github/workflows/unit_testing.yml
+    uses: ./.github/jobs/unit_testing.yml
   call-workflow-test-coverage:
-    uses: ./github/workflows/coverage.yml
+    uses: ./.github/jobs/coverage.yml
