[ci] - Fix remaning reusable workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
   call-workflow-golangci:
     uses: ./.github/workflows/golangci.yml
   call-workflow-unit-testing:
-    uses: ./.github/actions/unit-testing
+    uses: ./.github/workflows/unit-testing.yml
   call-workflow-test-coverage:
-    uses: ./.github/actions/coverage
+    uses: ./.github/workflows/coverage.yml
