--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -3,15 +3,15 @@ on:
 
 name: Unit testing
 runs-on: ubuntu-latest
-strategy:
-  matrix:
-    go:
-    - '1.23.3'
 env:
   COCKROACHDB_VERSION: 24.1.1
 
 jobs:
-  resuable-workflow:
+  unit-testing:
+    strategy:
+      matrix:
+        go:
+        - '1.23.3'
     steps:
     - uses: actions/checkout@v4 # https://github.com/actions/checkout/releases
 
