[ci] - Replace docker-compose command by docker compose

--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Start docker-compose stack
       run: |
-        sudo docker-compose -f docker/cockroach-demo/docker-compose.yaml up -d
+        sudo docker compose -f docker/cockroach-demo/docker-compose.yaml up -d
 
     - name: Run unit testing
       run: |
