--- a/docker/cockroach-demo/docker-compose.yaml
+++ b/docker/cockroach-demo/docker-compose.yaml
@@ -86,7 +86,7 @@ services:
     - synker_cluster
     restart: always
   redpandac01:
-    image: docker.vectorized.io/vectorized/redpanda:v21.10.1
+    image: docker.redpanda.com/redpandadata/redpanda:v24.3.1
     container_name: redpandac01
     hostname: redpandac01
     volumes:
@@ -123,7 +123,7 @@ services:
     - --advertise-rpc-addr
     - redpandac01:33145
   redpandac02:
-    image: docker.vectorized.io/vectorized/redpanda:v21.10.1
+    image: docker.redpanda.com/redpandadata/redpanda:v24.3.1
     container_name: redpandac02
     hostname: redpandac02
     volumes:
@@ -161,7 +161,7 @@ services:
     - --advertise-rpc-addr
     - redpandac02:33146
   redpandac03:
-    image: docker.vectorized.io/vectorized/redpanda:v21.10.1
+    image: docker.redpanda.com/redpandadata/redpanda:v24.3.1
     container_name: redpandac03
     hostname: redpandac03
     volumes:
